# ecs-c

./: .gitignore  CMakeLists.txt  README.md  a.txt  main.cpp
.github/workflows/: c-cpp.yml
include/: check.hpp  cpubench.hpp  membench.hpp  sysbench.h  sysbench.hpp
src/: check.cpp  main.cpp  membench.cpp  sb_memory.c  test  test.cpp
